@@ -5,15 +5,18 @@ Description
 
 The **default** recipe of this Chef cookbook will
  * Configure the APT or YUM repository provided by TypeSafe company
- * Install the meta-package **typesafe-stack** that includes supported versions of [sbt](https://github.com/harrah/xsbt) and [giter8](https://github.com/n8han/giter8). 
+ * Install the meta-package **typesafe-stack** that includes supported versions of [sbt](https://github.com/harrah/xsbt) and [giter8](https://github.com/n8han/giter8).
+  * Akka and Play are not installed, since TypeSafe recommends to create project on top of these frameworks with giter8 templates available in [@typesafehub](https://github.com/typesafehub) **.g8-suffixed** repositories, like for instance https://github.com/typesafehub/akka-scala-sbt.g8
 
-**Note:** On Debian/APT-based platorm, the repository public key is installed in more "standard way" compared to [Debian/Ubuntu installation guidelines](http://typesafe.com/stack/download) from TypeSafe. (I expect that TypeSafe will in near future make its apt-repo public key available for usual HTTP download... and drop the manual installation-step of repo-deb-build-0002.deb package)
+**Notes:** 
+ * On Debian/APT-based platorm, the repository public key is installed in a more "usual way" compared to [Debian/Ubuntu installation guidelines](http://typesafe.com/stack/download) from TypeSafe. (I expect that TypeSafe will in near future make its apt-repo public key available for usual HTTP download... and drop the manual installation-step of repo-deb-build-0002.deb package)
+ * TypeSafe bundles an adapted version of [sbt-extras](https://github.com/paulp/sbt-extras#readme) to implement sbt main script.
 
 Requirements
 ============
 
-* depends on opscode/apt cookbook 1.4.0+ because of **[COOK-921** (the apt-repository public key file is bundled in cookbook, not HTTP-fetched from a remote server)
-* **Attention:** Integration with opscode-apt cookbook 1.4.8+ requires at least Chef 0.10.10+ because of **COOK-1435**. See opscode-cookbooks/apt@4c8d03f6afc22eca0b1ffb7389e61aec9a16666b
+* Depends on **[opscode/apt cookbook](https://github.com/opscode-cookbooks/apt) >= 1.4.0+** because of [COOK-921](https://github.com/opscode/cookbooks/pull/282) (the apt-repository public key file is bundled in cookbook, not HTTP-fetched from a remote server)
+* **Attention:** Integration with opscode-apt cookbook 1.4.8+ requires at least Chef 0.10.10+ because of [COOK-1435](https://github.com/opscode-cookbooks/apt/commit/4c8d03f6afc22eca0b1ffb7389e61aec9a16666b).
 
 Attributes
 ==========
@@ -30,10 +33,26 @@ Quality Assurance
 
 Version 0.1.0 has been validated on Ubuntu 12.10 64-bit (for apt)  and on CentOS 6.4 64-bit (for yum)
 
-Credits
-=======
 
-The creation of this cookbook has been influenced by:
+Open Issues
+===========
+
+* `sbt` runs by default with following JVM memory parameters `-Xms1536m -Xmx1536m -XX:MaxPermSize=384`, expect following error with target host with less than 2048M of RAM:
+
+```
+Error occurred during initialization of VM
+Could not reserve enough space for object heap
+```
+
+* Provide some templates to deploy sbt customizations via `/etc/sbt/sbtopts` and/or `.sbtopts` files
+
+Contribution and Credits
+========================
+
+*Feel free to fork and send pull request!*
+
+Before starting to create this cookbook, I first looked for existing ones, but I did not find exactly what I wished. 
+The creation of this cookbook was nevertheless influenced by following similar recipes:
  * https://github.com/garrettux/scala-sbt-cookbook/blob/master/recipes/default.rb 
  * https://github.com/opyate/typesafe-stack-cookbook/blob/master/recipes/default.rb 
 
